# aviation-knowledge-base

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  ROADMAP_FUTURE.md  STATE.md  config.json
.planning/decisions/: ADR-001-reserved.md  ADR-002-entity-additions.md  ADR-003-relation-additions.md  ADR-004-field-shapes.md  ADR-005-provenance-enum.md  ADR-006-triple-export.md  ADR-007-schema-versioning.md
.planning/design/: PRD_v0.md  PRD_v1.md  RAG_PIPELINE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
demo/: ask.html  bilingual.html  citation-chain.html  entities.html  h-darrieus.html  index.html  relations.html  style.css  supersession.html  validation.html
deploy/: .env.example  .env.wiki.example  authentik-phase2.md  backup-restore.md  docker-compose.wiki.yml  docker-compose.yml.draft  topology.md  wiki-git-storage.md  wiki-setup-runbook.md
docs/: GLOSSARY.md  README.md
evaluation/: README.md  queries.yaml
instances/_pending/: README.md
migrations/: 0_1_0_to_template.py.example  PATTERN.md
ontology/: CHANGELOG.md  _meta.schema.json
process-log/: README.md  phase-1-completion.md  phase-2-completion.md  phase-3-completion.md  phase-4-completion.md  phase-5-completion.md  phase-6-completion.md
scripts/: build_demo_ui.py  build_wiki_pages.py  validate.py
tests/: _invalid_dir_to_rules.py  conftest.py  test_mutations.py  test_validators.py
(+252 files in other folders)
